--- a/res/doc/configs/mb_compressor_lr.cfg
+++ b/res/doc/configs/mb_compressor_lr.cfg
@@ -1,16 +1,16 @@
 # -------------------------------------------------------------------------------
 # This file contains configuration of the audio plugin.
-#   Package:             lsp-plugin-fw ((null))
-#   Package version:     0.5.0
+#   Package:             lsp-plugins (Linux Studio Plugins)
+#   Package version:     1.2.14
 #   Plugin name:         Multi-band Kompressor LeftRight x8 (Multiband Compressor LeftRight x8)
-#   Plugin version:      1.0.3
+#   Plugin version:      1.0.18
 #   UID:                 mb_compressor_lr
-#   LV2 URID:            http://lsp-plug.in/plugins/lv2/mb_compressor_lr
+#   LV2 URI:             http://lsp-plug.in/plugins/lv2/mb_compressor_lr
 #   VST identifier:      0egf
 #   LADSPA identifier:   5002136
 #   LADSPA label:        http://lsp-plug.in/plugins/ladspa/mb_compressor_lr
 # 
-# (C) LSP Plugin Framework
+# (C) Linux Studio Plugins
 #   https://lsp-plug.in/
 # 
 # -------------------------------------------------------------------------------
@@ -18,9 +18,10 @@
 # Bypass [boolean]: true/false
 bypass = false
 
-# Compressor mode: 0..1
+# Compressor mode: 0..2
 #   0: Classic
 #   1: Modern
+#   2: Linear Phase
 mode = 1
 
 # Input gain [G]: 0.00000000..10.00000000
@@ -42,7 +43,7 @@ react = 0.20000
 shift = 0.00 db
 
 # Graph zoom [G]: 0.12589000..1.00000000
-zoom = -34.14 db
+zoom = 0.00 db
 
 # Envelope boost: 0..4
 #   0: None
@@ -63,7 +64,7 @@ envb = 1
 #   7: Band 5
 #   8: Band 6
 #   9: Band 7
-bsel = 0
+bsel = 1
 
 # Band filter curves Left [boolean]: true/false
 flt_l = true
@@ -102,7 +103,7 @@ cbe_3l = false
 sf_3l = 252.00000
 
 # Compression band enable 4 Left [boolean]: true/false
-cbe_4l = false
+cbe_4l = true
 
 # Split frequency 4 Left [Hz]: 10.00000000..20000.00000000
 sf_4l = 632.00000
@@ -114,7 +115,7 @@ cbe_5l = false
 sf_5l = 1587.00000
 
 # Compression band enable 6 Left [boolean]: true/false
-cbe_6l = false
+cbe_6l = true
 
 # Split frequency 6 Left [Hz]: 10.00000000..20000.00000000
 sf_6l = 3984.00000
@@ -144,7 +145,7 @@ cbe_3r = false
 sf_3r = 252.00000
 
 # Compression band enable 4 Right [boolean]: true/false
-cbe_4r = false
+cbe_4r = true
 
 # Split frequency 4 Right [Hz]: 10.00000000..20000.00000000
 sf_4r = 632.00000
@@ -156,7 +157,7 @@ cbe_5r = false
 sf_5r = 1587.00000
 
 # Compression band enable 6 Right [boolean]: true/false
-cbe_6r = false
+cbe_6r = true
 
 # Split frequency 6 Right [Hz]: 10.00000000..20000.00000000
 sf_6r = 3984.00000
@@ -167,18 +168,20 @@ cbe_7r = false
 # Split frequency 7 Right [Hz]: 10.00000000..20000.00000000
 sf_7r = 10000.00000
 
-# Sidechain source 0 Left: 0..3
+# Sidechain source 0 Left: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_0l = 0
 
 # Sidechain mode 0 Left: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_0l = 1
 
 # Sidechain lookahead 0 Left [ms]: 0.00000000..20.00000000
@@ -236,8 +239,10 @@ cr_0l = 1.00000
 kn_0l = -13.82 db
 
 # Boost threshold 0 Left [G]: 0.000001000000..0.001000000047
+bth_0l = -72.0000 db
 
-# Boost signal amount 0 Left [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 0 Left [G]: 0.000251190009..3981.072998046875
+bsa_0l = 6.0000 db
 
 # Makeup gain 0 Left [G]: 0.00100000..1000.00000000
 mk_0l = 0.00 db
@@ -245,18 +250,20 @@ mk_0l = 0.00 db
 # Hue  0 Left: 0.00000000..1.00000000
 hue_0l = 0.00000
 
-# Sidechain source 1 Left: 0..3
+# Sidechain source 1 Left: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_1l = 0
 
 # Sidechain mode 1 Left: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_1l = 1
 
 # Sidechain lookahead 1 Left [ms]: 0.00000000..20.00000000
@@ -296,7 +303,7 @@ bs_1l = false
 bm_1l = false
 
 # Attack threshold 1 Left [G]: 0.00100000..1.00000000
-al_1l = -62.76 db
+al_1l = -60.00 db
 
 # Attack time 1 Left [ms]: 0.00000000..2000.00000000
 at_1l = 103.92912
@@ -314,8 +321,10 @@ cr_1l = 7.18920
 kn_1l = -13.82 db
 
 # Boost threshold 1 Left [G]: 0.000001000000..0.001000000047
+bth_1l = -72.0000 db
 
-# Boost signal amount 1 Left [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 1 Left [G]: 0.000251190009..3981.072998046875
+bsa_1l = 6.0000 db
 
 # Makeup gain 1 Left [G]: 0.00100000..1000.00000000
 mk_1l = 0.00 db
@@ -323,18 +332,20 @@ mk_1l = 0.00 db
 # Hue  1 Left: 0.00000000..1.00000000
 hue_1l = 0.12500
 
-# Sidechain source 2 Left: 0..3
+# Sidechain source 2 Left: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_2l = 0
 
 # Sidechain mode 2 Left: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_2l = 1
 
 # Sidechain lookahead 2 Left [ms]: 0.00000000..20.00000000
@@ -392,8 +403,10 @@ cr_2l = 1.00000
 kn_2l = -13.82 db
 
 # Boost threshold 2 Left [G]: 0.000001000000..0.001000000047
+bth_2l = -72.0000 db
 
-# Boost signal amount 2 Left [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 2 Left [G]: 0.000251190009..3981.072998046875
+bsa_2l = 6.0000 db
 
 # Makeup gain 2 Left [G]: 0.00100000..1000.00000000
 mk_2l = 0.00 db
@@ -401,18 +414,20 @@ mk_2l = 0.00 db
 # Hue  2 Left: 0.00000000..1.00000000
 hue_2l = 0.25000
 
-# Sidechain source 3 Left: 0..3
+# Sidechain source 3 Left: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_3l = 0
 
 # Sidechain mode 3 Left: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_3l = 1
 
 # Sidechain lookahead 3 Left [ms]: 0.00000000..20.00000000
@@ -470,8 +485,10 @@ cr_3l = 1.00000
 kn_3l = -13.82 db
 
 # Boost threshold 3 Left [G]: 0.000001000000..0.001000000047
+bth_3l = -72.0000 db
 
-# Boost signal amount 3 Left [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 3 Left [G]: 0.000251190009..3981.072998046875
+bsa_3l = 6.0000 db
 
 # Makeup gain 3 Left [G]: 0.00100000..1000.00000000
 mk_3l = 0.00 db
@@ -479,18 +496,20 @@ mk_3l = 0.00 db
 # Hue  3 Left: 0.00000000..1.00000000
 hue_3l = 0.37500
 
-# Sidechain source 4 Left: 0..3
+# Sidechain source 4 Left: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_4l = 0
 
 # Sidechain mode 4 Left: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_4l = 1
 
 # Sidechain lookahead 4 Left [ms]: 0.00000000..20.00000000
@@ -521,7 +540,7 @@ schf_4l = 1587.00000
 cm_4l = 0
 
 # Compressor enable 4 Left [boolean]: true/false
-ce_4l = false
+ce_4l = true
 
 # Solo band 4 Left [boolean]: true/false
 bs_4l = false
@@ -542,14 +561,16 @@ rrl_4l = -inf db
 rt_4l = 100.00000
 
 # Ratio 4 Left: 1.00000000..100.00000000
-cr_4l = 1.00000
+cr_4l = 7.01192
 
 # Knee 4 Left [G]: 0.06310000..1.00000000
 kn_4l = -13.82 db
 
 # Boost threshold 4 Left [G]: 0.000001000000..0.001000000047
+bth_4l = -72.0000 db
 
-# Boost signal amount 4 Left [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 4 Left [G]: 0.000251190009..3981.072998046875
+bsa_4l = 6.0000 db
 
 # Makeup gain 4 Left [G]: 0.00100000..1000.00000000
 mk_4l = 0.00 db
@@ -557,18 +578,20 @@ mk_4l = 0.00 db
 # Hue  4 Left: 0.00000000..1.00000000
 hue_4l = 0.50000
 
-# Sidechain source 5 Left: 0..3
+# Sidechain source 5 Left: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_5l = 0
 
 # Sidechain mode 5 Left: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_5l = 1
 
 # Sidechain lookahead 5 Left [ms]: 0.00000000..20.00000000
@@ -626,8 +649,10 @@ cr_5l = 1.00000
 kn_5l = -13.82 db
 
 # Boost threshold 5 Left [G]: 0.000001000000..0.001000000047
+bth_5l = -72.0000 db
 
-# Boost signal amount 5 Left [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 5 Left [G]: 0.000251190009..3981.072998046875
+bsa_5l = 6.0000 db
 
 # Makeup gain 5 Left [G]: 0.00100000..1000.00000000
 mk_5l = 0.00 db
@@ -635,18 +660,20 @@ mk_5l = 0.00 db
 # Hue  5 Left: 0.00000000..1.00000000
 hue_5l = 0.62500
 
-# Sidechain source 6 Left: 0..3
+# Sidechain source 6 Left: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_6l = 0
 
 # Sidechain mode 6 Left: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_6l = 1
 
 # Sidechain lookahead 6 Left [ms]: 0.00000000..20.00000000
@@ -677,7 +704,7 @@ schf_6l = 10000.00000
 cm_6l = 0
 
 # Compressor enable 6 Left [boolean]: true/false
-ce_6l = false
+ce_6l = true
 
 # Solo band 6 Left [boolean]: true/false
 bs_6l = false
@@ -698,14 +725,16 @@ rrl_6l = -inf db
 rt_6l = 100.00000
 
 # Ratio 6 Left: 1.00000000..100.00000000
-cr_6l = 1.00000
+cr_6l = 1.82078
 
 # Knee 6 Left [G]: 0.06310000..1.00000000
 kn_6l = -13.82 db
 
 # Boost threshold 6 Left [G]: 0.000001000000..0.001000000047
+bth_6l = -72.0000 db
 
-# Boost signal amount 6 Left [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 6 Left [G]: 0.000251190009..3981.072998046875
+bsa_6l = 6.0000 db
 
 # Makeup gain 6 Left [G]: 0.00100000..1000.00000000
 mk_6l = 0.00 db
@@ -713,18 +742,20 @@ mk_6l = 0.00 db
 # Hue  6 Left: 0.00000000..1.00000000
 hue_6l = 0.75000
 
-# Sidechain source 7 Left: 0..3
+# Sidechain source 7 Left: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_7l = 0
 
 # Sidechain mode 7 Left: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_7l = 1
 
 # Sidechain lookahead 7 Left [ms]: 0.00000000..20.00000000
@@ -782,8 +813,10 @@ cr_7l = 1.00000
 kn_7l = -13.82 db
 
 # Boost threshold 7 Left [G]: 0.000001000000..0.001000000047
+bth_7l = -72.0000 db
 
-# Boost signal amount 7 Left [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 7 Left [G]: 0.000251190009..3981.072998046875
+bsa_7l = 6.0000 db
 
 # Makeup gain 7 Left [G]: 0.00100000..1000.00000000
 mk_7l = 0.00 db
@@ -791,18 +824,20 @@ mk_7l = 0.00 db
 # Hue  7 Left: 0.00000000..1.00000000
 hue_7l = 0.87500
 
-# Sidechain source 0 Right: 0..3
+# Sidechain source 0 Right: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_0r = 0
 
 # Sidechain mode 0 Right: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_0r = 1
 
 # Sidechain lookahead 0 Right [ms]: 0.00000000..20.00000000
@@ -860,8 +895,10 @@ cr_0r = 1.00000
 kn_0r = -13.82 db
 
 # Boost threshold 0 Right [G]: 0.000001000000..0.001000000047
+bth_0r = -72.0000 db
 
-# Boost signal amount 0 Right [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 0 Right [G]: 0.000251190009..3981.072998046875
+bsa_0r = 6.0000 db
 
 # Makeup gain 0 Right [G]: 0.00100000..1000.00000000
 mk_0r = 0.00 db
@@ -869,18 +906,20 @@ mk_0r = 0.00 db
 # Hue  0 Right: 0.00000000..1.00000000
 hue_0r = 0.00000
 
-# Sidechain source 1 Right: 0..3
+# Sidechain source 1 Right: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_1r = 0
 
 # Sidechain mode 1 Right: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_1r = 1
 
 # Sidechain lookahead 1 Right [ms]: 0.00000000..20.00000000
@@ -938,8 +977,10 @@ cr_1r = 69.74125
 kn_1r = -19.98 db
 
 # Boost threshold 1 Right [G]: 0.000001000000..0.001000000047
+bth_1r = -72.0000 db
 
-# Boost signal amount 1 Right [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 1 Right [G]: 0.000251190009..3981.072998046875
+bsa_1r = 6.0000 db
 
 # Makeup gain 1 Right [G]: 0.00100000..1000.00000000
 mk_1r = 0.00 db
@@ -947,18 +988,20 @@ mk_1r = 0.00 db
 # Hue  1 Right: 0.00000000..1.00000000
 hue_1r = 0.12500
 
-# Sidechain source 2 Right: 0..3
+# Sidechain source 2 Right: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_2r = 0
 
 # Sidechain mode 2 Right: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_2r = 1
 
 # Sidechain lookahead 2 Right [ms]: 0.00000000..20.00000000
@@ -1016,8 +1059,10 @@ cr_2r = 1.00000
 kn_2r = -13.82 db
 
 # Boost threshold 2 Right [G]: 0.000001000000..0.001000000047
+bth_2r = -72.0000 db
 
-# Boost signal amount 2 Right [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 2 Right [G]: 0.000251190009..3981.072998046875
+bsa_2r = 6.0000 db
 
 # Makeup gain 2 Right [G]: 0.00100000..1000.00000000
 mk_2r = 0.00 db
@@ -1025,18 +1070,20 @@ mk_2r = 0.00 db
 # Hue  2 Right: 0.00000000..1.00000000
 hue_2r = 0.25000
 
-# Sidechain source 3 Right: 0..3
+# Sidechain source 3 Right: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_3r = 0
 
 # Sidechain mode 3 Right: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_3r = 1
 
 # Sidechain lookahead 3 Right [ms]: 0.00000000..20.00000000
@@ -1094,8 +1141,10 @@ cr_3r = 1.00000
 kn_3r = -13.82 db
 
 # Boost threshold 3 Right [G]: 0.000001000000..0.001000000047
+bth_3r = -72.0000 db
 
-# Boost signal amount 3 Right [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 3 Right [G]: 0.000251190009..3981.072998046875
+bsa_3r = 6.0000 db
 
 # Makeup gain 3 Right [G]: 0.00100000..1000.00000000
 mk_3r = 0.00 db
@@ -1103,18 +1152,20 @@ mk_3r = 0.00 db
 # Hue  3 Right: 0.00000000..1.00000000
 hue_3r = 0.37500
 
-# Sidechain source 4 Right: 0..3
+# Sidechain source 4 Right: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_4r = 0
 
 # Sidechain mode 4 Right: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_4r = 1
 
 # Sidechain lookahead 4 Right [ms]: 0.00000000..20.00000000
@@ -1145,7 +1196,7 @@ schf_4r = 1587.00000
 cm_4r = 0
 
 # Compressor enable 4 Right [boolean]: true/false
-ce_4r = false
+ce_4r = true
 
 # Solo band 4 Right [boolean]: true/false
 bs_4r = false
@@ -1172,8 +1223,10 @@ cr_4r = 1.00000
 kn_4r = -13.82 db
 
 # Boost threshold 4 Right [G]: 0.000001000000..0.001000000047
+bth_4r = -72.0000 db
 
-# Boost signal amount 4 Right [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 4 Right [G]: 0.000251190009..3981.072998046875
+bsa_4r = 6.0000 db
 
 # Makeup gain 4 Right [G]: 0.00100000..1000.00000000
 mk_4r = 0.00 db
@@ -1181,18 +1234,20 @@ mk_4r = 0.00 db
 # Hue  4 Right: 0.00000000..1.00000000
 hue_4r = 0.50000
 
-# Sidechain source 5 Right: 0..3
+# Sidechain source 5 Right: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_5r = 0
 
 # Sidechain mode 5 Right: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_5r = 1
 
 # Sidechain lookahead 5 Right [ms]: 0.00000000..20.00000000
@@ -1250,8 +1305,10 @@ cr_5r = 1.00000
 kn_5r = -13.82 db
 
 # Boost threshold 5 Right [G]: 0.000001000000..0.001000000047
+bth_5r = -72.0000 db
 
-# Boost signal amount 5 Right [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 5 Right [G]: 0.000251190009..3981.072998046875
+bsa_5r = 6.0000 db
 
 # Makeup gain 5 Right [G]: 0.00100000..1000.00000000
 mk_5r = 0.00 db
@@ -1259,18 +1316,20 @@ mk_5r = 0.00 db
 # Hue  5 Right: 0.00000000..1.00000000
 hue_5r = 0.62500
 
-# Sidechain source 6 Right: 0..3
+# Sidechain source 6 Right: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_6r = 0
 
 # Sidechain mode 6 Right: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_6r = 1
 
 # Sidechain lookahead 6 Right [ms]: 0.00000000..20.00000000
@@ -1301,7 +1360,7 @@ schf_6r = 10000.00000
 cm_6r = 0
 
 # Compressor enable 6 Right [boolean]: true/false
-ce_6r = false
+ce_6r = true
 
 # Solo band 6 Right [boolean]: true/false
 bs_6r = false
@@ -1328,8 +1387,10 @@ cr_6r = 1.00000
 kn_6r = -13.82 db
 
 # Boost threshold 6 Right [G]: 0.000001000000..0.001000000047
+bth_6r = -72.0000 db
 
-# Boost signal amount 6 Right [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 6 Right [G]: 0.000251190009..3981.072998046875
+bsa_6r = 6.0000 db
 
 # Makeup gain 6 Right [G]: 0.00100000..1000.00000000
 mk_6r = 0.00 db
@@ -1337,18 +1398,20 @@ mk_6r = 0.00 db
 # Hue  6 Right: 0.00000000..1.00000000
 hue_6r = 0.75000
 
-# Sidechain source 7 Right: 0..3
+# Sidechain source 7 Right: 0..5
 #   0: Middle
 #   1: Side
 #   2: Left
 #   3: Right
+#   4: Min
+#   5: Max
 scs_7r = 0
 
 # Sidechain mode 7 Right: 0..3
 #   0: Peak
 #   1: RMS
-#   2: Low-Pass
-#   3: Uniform
+#   2: LPF
+#   3: SMA
 scm_7r = 1
 
 # Sidechain lookahead 7 Right [ms]: 0.00000000..20.00000000
@@ -1406,8 +1469,10 @@ cr_7r = 1.00000
 kn_7r = -13.82 db
 
 # Boost threshold 7 Right [G]: 0.000001000000..0.001000000047
+bth_7r = -72.0000 db
 
-# Boost signal amount 7 Right [G]: 1.000000000000..3981.072998046875
+# Boost signal amount 7 Right [G]: 0.000251190009..3981.072998046875
+bsa_7r = 6.0000 db
 
 # Makeup gain 7 Right [G]: 0.00100000..1000.00000000
 mk_7r = 0.00 db
